[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-adaptation-building-energy-forecasting"
version = "0.1.0"
description = "Adaptive building-energy demand forecasting with WGAN-GP, PSO, and baseline models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Xiufeng Liu", email = "xiuli@dtu.dk" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "lightgbm>=4.0",
  "statsmodels>=0.14",
  "torch>=2.1",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["experiments*"]

